# cbff-demo

./: .env  .gitignore  Dockerfile  LICENSE.md  README.md  app.yml  docker-compose.yml  gunicorn-cfg.py  manage.py  package.json  pyproject.toml  render.yaml  requirements.txt  startup.sh  test_db.py
app/: admin.py  config.py  example.py  mongo_models.py  temp-plot.html  tests.py  urls.py  utils.py  views.py
app/migrations/: 0001_initial.py  0002_auto_20210808_0346.py  0003_remove_orders_invoicedate.py  0004_auto_20210808_1451.py  0005_mongoorders.py  0006_auto_20210915_0011.py
app/models/: models.py  mongo_models.py
authentication/: __init__.py  admin.py  config.py  forms.py  models.py  tests.py  urls.py  views.py
authentication/tests/: tests.py  tests_admin.py
core/: .env  .gitignore  asgi.py  flags.py  settings.py  urls.py  wsgi.py
core/static/assets/css/: volt.css
core/static/assets/js/: flags.js  graphs-og.js  graphs.js  honey.js  line_graph.js  users.js  volt.js
core/static/assets/scss/: volt.scss
core/static/assets/scss/volt/components/: _buttons.scss
core/templates/: dashboard.html  index.html  transactions.html
core/templates/accounts/: log.html  login.html  register.html
core/templates/d3-tests/: dashboard-test.html  honey.js  test.js  ungroupedLine.js
core/templates/includes/: footer.html  navigation.html  scripts.html  settings-box.html  sidebar.html
core/templates/layouts/: base-fullscreen.html  base.html
