[tool.poetry]
name = "cbff-demo"
version = "0.1.0"
description = ""
authors = ["Deon Saunders <adsaunde@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Django = "^3.2.7"
whitenoise = {extras = ["brotli"], version = "^5.3.0"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"